# ocaml-workflow

./: .gitignore  .travis.yml  CHANGES.md  README.md  dune-project  index.html  numberz.opam
.github/workflows/: test.yml
lib/: dune  fact.ml  fact.mli  fib.ml  fib.mli  numbers.ml
numberz/: index.html
numberz/Numberz/: index.html
numberz/Numberz/Fact/: index.html
numberz/Numberz/Fib/: index.html
numberz/Numberz__/: index.html
numberz/Numberz__/Fact/: index.html
numberz/Numberz__/Fib/: index.html
numberz/Numberz__Fact/: index.html
numberz/Numberz__Fib/: index.html
test/: dune  test.ml  test_fact.ml  test_fib.ml  testable.ml  testable.mli
