opam-version: "2.0"
version: "~dev"
synopsis: "A small package with functions for numbers"
maintainer: "patricoferris <patrickferris17@gmail.com>"
authors: "patricoferris <patrickferris17@gmail.com>"
license: "ISC"
homepage: "https://github.com/patricoferris/ocaml-workflows-ci-github"
bug-reports: "https://github.com/patricoferris/ocaml-workflows-ci-github/issues"
depends: [
  "ocaml"   {>= "4.07.0"}
  "dune"    {>= "2.0.0"}
  "zarith"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
